2002-01-10  Jon K Hellan  <hellan@acm.org>

	* src/datetime.c (datetime_isoweeknum): Added. Return the ISO 8601
	week number of date. 
	(datetime_weeknum): Added. Return week number of date according to
	method.

	* src/datetime.h: define week numbering methods. Declare
	datetime_isoweeknum and datetime_weeknum.

2002-01-09  Andreas J. Guelzow  <aguelzow@taliesin.ca>

	* analysis-tools.c (histogram_tool) : implement calculated bins
	* analysis-tools.h : expand argument list for histogram_tool

2002-01-08  Jody Goldberg <jody@gnome.org>

	* src/expr.c (expr_eval_real) : merge eval_funcall into here.
	  It was not adding much.
	* src/gnumeric-graph.c (gnm_graph_get_spec) : warning suppression.

2002-01-08  Morten Welinder  <terra@diku.dk>

	* src/func.c (function_marshal_arg): When we want numbers, accept
	strings that parse to numbers also.  Return a proper error.

2002-01-08  Morten Welinder  <terra@diku.dk>

	* src/eval.h (DependentFlags): Kill comma before closing brace.
	* src/clipboard.h (CellCopyType): Ditto.
	* src/format-template.h (FreqDirection): Ditto.
	* src/sheet-object.h (SheetObjectDirection,
	SheetObjectAnchorType): Ditto.
	* src/symbol.h (SymbolType): Ditto.

2002-01-08  Andreas J. Guelzow  <aguelzow@taliesin.ca>

	* analysis-tools.c (average_tool) : calculate standard errors

2002-01-07  Jody Goldberg <jody@gnome.org>

	* src/formats.c (currency_symbol) : add RUR.

	* src/value.c (value_get_as_int) : be extra careful.

2002-01-07  Andreas J. Guelzow  <aguelzow@taliesin.ca>

	* analysis-tools.c (ranking_tool) : calculate rank for ties
	  based on av_ties_flag

2002-01-07  Andreas J. Guelzow  <aguelzow@taliesin.ca>

	* analysis-tools.h : add autofit_flag to data_analysis_output_t
	* analysis-tools.c : insert lots of calls to autofit_columns
	(autofit_columns) : new procedure
	
2002-01-07  Morten Welinder  <welinder@rentec.com>

	* configure.in: check for ieee754.h

2002-01-06  Jody Goldberg <jody@gnome.org>

	* configure.in : post release bump.
