@@ -1,3 +1,9 @@
+2002-01-10  Andreas J. Guelzow  <aguelzow@taliesin.ca>
+
+	* src/analysis-tools.c (fourier_fft) : Fast Fourier Transform
+	(fourier_fft_inv) : Inverse Fast Fourier Transform
+	(fourier_tool) : new tool
+
 2002-01-10  Jon K Hellan  <hellan@acm.org>
 
 	* src/datetime.c (datetime_isoweeknum): Added. Return the ISO 8601
