@@ -6,6 +6,7 @@ Andreas:
 	  behaviour in case of ties.
 	* Enable Standard Errors Checkbox in Moving Averages Dialog
 	* Implement calculated bins in Histogram Tool
+	* Implement Fourier Analysis Tool
 
 Jody:
 	* Generate spans after importing a lotus 123 file.
